...
            android:onClick="@{() -> viewmodel.stopButtonClicked()}"
            android:text="@string/stop"
            app:layout_constraintBottom_toTopOf="@+id/displayWorkTimeLeft"
            app:layout_constraintEnd_toStartOf="@+id/startPause"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toEndOf="@+id/setsIncrease"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- ЗДЕСЬ АНИМАЦИЯ - разобрать -->
        <!--  @BindingAdapter(value=["animateBackground", "animateBackgroundStage"], requireAll = true) -->
        <!-- One-way Observable Field преобразует через Converter 100 из viewModel ObservableInt в 10.0 String -->
        <androidx.appcompat.widget.AppCompatTextView
...
            android:text="@{Converter.fromTenthsToSeconds(viewmodel.workTimeLeft)}"
            android:textAlignment="center"
            android:textColor="@color/secondaryDarkColor"
            animateBackground="@{viewmodel.timerRunning}"
            animateBackgroundStage="@{viewmodel.inWorkingStage}"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/setWorkTime"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startPause"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="spread_inside"
...
            tools:text="15:34"
            loseFocusWhen="@{viewmodel.timerRunning}"
            clearOnFocusAndDispatch="@{() -> viewmodel.timePerWorkSetChanged(setWorkTime.getText())}"
            hideKeyboardOnInputDone="@{true}"
            app:layout_constraintBottom_toTopOf="@+id/workoutBar"
            app:layout_constraintTop_toBottomOf="@+id/displayWorkTimeLeft"
            app:layout_constraintStart_toEndOf="@+id/workminus"
            app:layout_constraintEnd_toStartOf="@+id/workplus"/>

        <!-- One-way ObservableField + One-way custom focus listener-->
        <!-- т.е. две односторонние привязки: через конвертер и вызов отсюда лямбды + прослушивание фокуса клавы -->
        <EditText
            android:id="@+id/setRestTime"
            android:layout_width="64dp"
...
            app:layout_constraintBottom_toTopOf="@+id/restBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startPause"/>

       <!--Really TWO-WAY Data Binding = @Bindable + custom focus listener -->
        <!--  @BindingAdapter("numberOfSets")+ @InverseBindingAdapter(attribute = "numberOfSets") СЛЕВА =-->
        <!-- fun setArrayToString:String + @InverseMethod("stringToSetArray") т.е fun stringToSetArray:Array<Int> СПРАВА -->
        <EditText
            android:id="@+id/numberOfSets"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_marginStart="4dp"
...
